# spec-loop

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IDEA.md  KAPARTHY.md  LICENSE  PLAN.md  README.md  SECURITY.md  specloop.yaml
.claude/agents/: specloop-qa-explorer.md  specloop-report-triage.md  specloop-scenario-writer.md
.claude/commands/: specloop-new-scenario.md  specloop-run-scenario.md
.codex/: mcp.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  docs.yml
.specloop/: acceptance-criteria.md  business-rules.md  critical-flows.md  personas.md  product.md  risk-register.md  specs.md
.specloop/findings/: finding-001.json
.specloop/loops/: ITERATION_LOG.md  checkout-smoke.md  manual-browser-qa-loop.md
.specloop/prompts/: explorer.md
.specloop/scenarios/: lemon-content-screenshots.md  localhost-3000-smoke.md  pricing-smoke.md
.specloop/schemas/: business-rule.schema.json  config.schema.json  finding.schema.json  manifest.schema.json  regression-test-suggestion.schema.json
apps/docs/: README.md  astro.config.mjs  package-lock.json  package.json
crates/specloop-cli/: Cargo.toml
crates/specloop-cli/src/: main.rs
crates/specloop-config/: Cargo.toml
crates/specloop-core/: Cargo.toml
crates/specloop-core/src/: lib.rs
crates/specloop-reporter/: Cargo.toml
crates/specloop-safety/: Cargo.toml
crates/specloop-schemas/: Cargo.toml
crates/specloop-templates/: Cargo.toml
docs/: getting-started.md  licensing.md  loop-protocol.md  memory-caching.md  monetization.md  product-context.md  security-guardrails.md
docs/cargo/: README.md
examples/nextjs-saas/: README.md
schemas/: acceptance-criteria.schema.json  critical-flow.schema.json  persona.schema.json  risk.schema.json  run-report.schema.json  spec.schema.json
scripts/: specloop-browser-smoke.ts  specloop-new-loop.ts  specloop-new-scenario.ts
skills/specloop-agentic-value-loop/: SKILL.md
skills/specloop-backend-api-loop/: SKILL.md
skills/specloop-mobile-ui-loop/: SKILL.md
specs/: README.md
specs/adr/: 0001-rust-cli-workspace.md  0002-docs-first-github-pages.md  0004-cold-hot-memory-cache.md  (+1 more)
(+23 files in other folders)
