[package]
name = "specloop-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
specloop-config.workspace = true
specloop-reporter.workspace = true
specloop-safety.workspace = true
specloop-schemas.workspace = true
specloop-templates.workspace = true

[dev-dependencies]
tempfile.workspace = true
